[tool.poetry]
name = "garmin"
version = "0.1.0"
description = "Read garmin fit files and output metrics"
authors = ["Kiril Schewzow <kiril.schewzow@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
fitdecode = "^0.10.0"
plotly = "^5.23.0"
streamlit = "^1.37.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
